Finished the input data pipeline - moving onto coding attention mechanisms

--- a/text_data_preparation.ipynb
+++ b/text_data_preparation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 84,
    "id": "ac735184",
    "metadata": {},
    "outputs": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 85,
    "id": "028cd798",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
        "20479"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 86,
    "id": "47e79584",
    "metadata": {},
    "outputs": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 87,
    "id": "98010ba4",
    "metadata": {},
    "outputs": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 88,
    "id": "8771f625",
    "metadata": {},
    "outputs": [],
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 89,
    "id": "3ef7e75e",
    "metadata": {},
    "outputs": [],
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 90,
    "id": "b346c3c7",
    "metadata": {},
    "outputs": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 91,
    "id": "1d6b3f91",
    "metadata": {},
    "outputs": [],
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 92,
    "id": "101c6b59",
    "metadata": {},
    "outputs": [],
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 93,
    "id": "60f69578",
    "metadata": {},
    "outputs": [
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 94,
    "id": "dc79bf57",
    "metadata": {},
    "outputs": [
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 95,
    "id": "bdca551b",
    "metadata": {},
    "outputs": [],
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 96,
    "id": "0f7d466a",
    "metadata": {},
    "outputs": [],
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 108,
    "id": "37c893eb",
    "metadata": {},
    "outputs": [
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 98,
    "id": "6cdaad0e",
    "metadata": {},
    "outputs": [],
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 99,
    "id": "7a5732c3",
    "metadata": {},
    "outputs": [
@@ -675,16 +675,16 @@
      "output_type": "stream",
      "text": [
       "Parameter containing:\n",
-      "tensor([[ 2.9233,  1.0037,  0.1829],\n",
-      "        [ 0.5822, -0.6715,  1.2714],\n",
-      "        [-1.1777,  1.0527,  3.4323],\n",
+      "tensor([[ 0.1422,  1.3499,  0.0085],\n",
+      "        [-0.6922,  0.8727, -0.3314],\n",
+      "        [ 0.1115, -1.4341,  0.7794],\n",
       "        ...,\n",
-      "        [ 0.6196, -0.4562,  0.2098],\n",
-      "        [ 0.9965, -0.2599, -0.4758],\n",
-      "        [-0.7815,  0.5118,  1.0793]], requires_grad=True)\n",
-      "tensor([[ 0.5822, -0.6715,  1.2714],\n",
-      "        [-1.1777,  1.0527,  3.4323],\n",
-      "        [-0.0044,  0.4648, -0.6622]], grad_fn=<EmbeddingBackward0>)\n"
+      "        [ 0.0318,  1.2755, -0.1905],\n",
+      "        [-1.6841,  0.2320,  1.7720],\n",
+      "        [ 0.7137, -0.1814, -0.1863]], requires_grad=True)\n",
+      "tensor([[-0.6922,  0.8727, -0.3314],\n",
+      "        [ 0.1115, -1.4341,  0.7794],\n",
+      "        [ 1.3596, -0.8402,  1.3205]], grad_fn=<EmbeddingBackward0>)\n"
      ]
     }
    ],
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 100,
    "id": "157dc71e",
    "metadata": {},
    "outputs": [
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 101,
    "id": "84b05257",
    "metadata": {},
    "outputs": [
@@ -743,39 +743,58 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([-0.9988, -0.6960,  0.0654, -0.8880,  0.5823, -1.2427, -1.0526,  0.4930,\n",
-      "         0.7341,  1.9821,  0.1357, -0.4956,  0.0997,  0.4063, -0.3367,  1.4633,\n",
-      "        -0.0184, -0.9584, -0.0308,  0.9638,  2.5644, -0.5611, -0.8829,  1.1227,\n",
-      "         0.4256,  0.4582,  0.6336, -0.0855,  0.4454, -0.3518,  1.7052, -0.8487,\n",
-      "         0.8234,  2.1771, -1.3618, -0.1450, -0.5358, -1.6696, -0.8202,  1.0337,\n",
-      "        -0.1173, -0.7754,  0.8385,  0.8295,  1.3024,  0.4284, -0.3607,  0.7992,\n",
-      "         1.3933,  0.0941,  0.2372, -0.2370,  1.4910,  0.9987, -1.1865, -0.3069,\n",
-      "         0.1346,  0.5661, -0.5148, -0.3957, -1.0687, -0.1233, -1.8526,  1.3663,\n",
-      "        -0.3923,  1.2786, -0.8598,  0.1056,  0.1019,  1.3633,  0.2277,  0.4245,\n",
-      "        -1.2892, -0.9338,  0.2264,  0.7138, -0.9484, -2.1643, -0.0120, -0.7847,\n",
-      "        -0.5763,  0.3662,  1.5207, -1.4789, -1.7094, -0.0849, -0.3197, -0.8684,\n",
-      "         0.2736, -0.5588,  0.8553,  0.6062,  0.9378, -0.3888,  0.3244,  1.1698,\n",
-      "         0.4177, -0.2731,  0.3238, -0.6351, -1.9642, -0.0474, -1.3413,  0.4355,\n",
-      "        -0.3439, -0.1652,  0.6072,  0.9068, -0.0852, -0.1722, -0.5509,  0.8748,\n",
-      "        -0.5640,  1.2107,  0.7526,  0.7932,  0.2743,  1.0880, -1.2865,  1.6531,\n",
-      "        -0.0325, -1.0153, -2.1195,  0.8458, -0.9857,  1.9651,  0.2777,  0.4682,\n",
-      "        -1.9025,  2.5973,  0.0719,  0.1231, -1.1292, -0.1047,  0.3509, -0.2518,\n",
-      "         1.4182,  0.3809, -1.3517, -0.9540,  0.2266, -1.1530,  0.0403,  1.4518,\n",
-      "        -0.0029, -0.1432, -1.2281,  0.2830,  0.6780,  0.2608, -0.4619, -0.4088,\n",
-      "         0.3031, -0.4473,  0.0439, -0.0711,  0.6193, -0.6569,  0.8196,  1.8275,\n",
-      "         0.3887,  0.3257, -1.4706,  1.8600,  0.4877, -1.0355,  0.9279,  0.3640,\n",
-      "        -0.6234, -0.9380, -0.4836,  0.8421,  1.1911,  0.6842, -0.6105,  0.1545,\n",
-      "         1.5524, -1.0893, -0.0384, -0.8936,  2.3283, -0.2223,  0.0852,  0.5647,\n",
-      "        -1.0834,  0.6756,  0.3255,  0.3094,  0.4469, -0.2394, -1.2017, -2.0663,\n",
-      "        -0.1878, -0.8454, -0.7637, -0.5406,  1.2496, -0.9707, -0.6456, -0.5706,\n",
-      "        -0.2790,  1.3337, -0.5311, -0.2161,  0.1899, -1.7371,  0.9012, -0.9557,\n",
-      "         0.1938, -0.1516,  1.2553, -0.2842,  1.6231,  0.6738,  0.3557,  0.8971,\n",
-      "        -0.9276, -0.2716,  0.3060, -0.4791,  0.3748, -0.3203,  0.7920, -1.7528,\n",
-      "        -0.1945,  0.4383, -0.0241, -0.1220,  0.5495,  0.9001,  0.8425,  1.4573,\n",
-      "        -0.8702,  1.3802, -2.4108,  0.3376,  2.7215, -0.3172,  0.7191, -0.3526,\n",
-      "        -0.3978, -0.7430,  0.6007,  1.1591, -0.4879, -0.5774, -1.1846,  0.2596,\n",
-      "         0.5299, -0.5955, -0.7424, -0.7372,  0.0365,  0.9286,  0.7425,  0.8639],\n",
-      "       grad_fn=<SelectBackward0>)\n"
+      "tensor([ 7.7118e-01, -9.2974e-01, -1.5828e-01,  8.5135e-01, -8.0851e-03,\n",
+      "         5.0699e-02, -1.0843e+00,  6.3269e-02, -1.6556e-01, -1.3544e-01,\n",
+      "         2.7106e-01,  1.2554e+00, -4.8439e-01,  1.1516e+00, -4.6239e-01,\n",
+      "         3.6374e-01, -1.3427e+00,  1.0661e+00,  1.2578e+00,  1.2672e-01,\n",
+      "         1.7477e-01, -1.0488e+00,  5.8173e-01, -2.2263e+00, -2.0617e+00,\n",
+      "        -7.1330e-01, -1.9703e+00, -3.1242e-01, -3.2559e-01, -7.1192e-01,\n",
+      "        -3.4166e-01, -7.1205e-01,  6.5266e-01,  8.1025e-01, -7.0064e-01,\n",
+      "        -3.2591e-01, -1.2289e+00,  2.9190e-01,  2.4351e+00, -1.4330e+00,\n",
+      "         5.4785e-01, -1.8055e-01, -1.1329e+00, -3.5984e-01, -7.8549e-01,\n",
+      "         1.6140e+00, -1.5142e+00,  5.8546e-01,  1.9216e+00,  1.6418e+00,\n",
+      "         6.5437e-01,  9.6917e-03, -1.5318e-01, -5.4701e-01, -6.9347e-01,\n",
+      "        -4.6413e-02,  1.3223e-01,  7.5760e-01,  2.6694e-01, -1.4334e+00,\n",
+      "        -1.5191e+00, -8.4123e-01, -3.7706e-01,  4.5188e-01, -1.9955e-01,\n",
+      "        -1.9127e+00, -4.6297e-01,  2.0883e-01, -9.1991e-01, -1.1842e+00,\n",
+      "         2.2082e-01,  6.4070e-01,  4.7851e-01, -5.8930e-01, -2.5287e+00,\n",
+      "         1.8860e-01,  7.0615e-01,  4.2127e-01, -5.8463e-01, -2.3257e-02,\n",
+      "        -8.4745e-01,  5.5093e-01, -3.0655e-01, -5.3289e-01,  5.8352e-01,\n",
+      "        -1.0410e+00, -2.6339e-01, -3.2854e-01, -1.0870e-01,  8.6757e-01,\n",
+      "         9.2665e-01, -8.0771e-01,  1.3508e+00, -4.1582e-01,  6.2664e-01,\n",
+      "         1.8516e+00,  8.6764e-01, -6.4712e-01,  2.0849e-01, -4.1594e-01,\n",
+      "         9.5970e-01, -2.4885e-01,  1.1266e+00,  6.3429e-01,  8.6201e-01,\n",
+      "        -3.6971e-01, -8.3299e-01, -4.6948e-01, -1.8961e-01,  1.0175e+00,\n",
+      "         3.2444e-01,  3.8268e-01,  4.3652e-01,  7.2038e-01, -2.1642e-01,\n",
+      "         2.0354e-01, -1.1951e+00,  9.2216e-01,  6.5435e-01,  1.3369e+00,\n",
+      "         2.4652e-01,  3.8230e-01, -5.0043e-01, -2.0885e-01, -1.2338e+00,\n",
+      "         5.3839e-01, -1.0345e+00,  1.8830e+00,  1.6478e+00, -1.3122e-01,\n",
+      "        -8.5664e-01,  6.0852e-01, -1.8479e+00,  1.5597e+00,  2.1500e+00,\n",
+      "         2.9300e-01, -1.0135e+00, -2.5050e-01,  7.3789e-01, -3.6770e-01,\n",
+      "         4.1557e-01,  4.4266e-01, -1.1801e+00, -1.0569e+00,  5.5040e-01,\n",
+      "        -1.4573e+00,  1.7301e+00,  2.0029e-01, -8.2808e-01, -1.5826e+00,\n",
+      "         7.1532e-01,  5.0931e-01,  4.5970e-01,  1.2263e+00, -1.3747e+00,\n",
+      "         1.4157e-03, -2.3536e+00, -2.5057e-01,  3.2942e-01, -1.2207e-01,\n",
+      "         1.1630e+00,  2.1913e-02,  1.5748e+00,  2.1371e-01,  1.2795e+00,\n",
+      "        -4.8120e-02,  9.1871e-01, -1.7607e-02,  1.0854e-03, -4.3180e-01,\n",
+      "        -1.1395e+00,  1.1968e-01,  1.4586e-03, -9.0506e-01, -9.8220e-01,\n",
+      "        -2.9821e-01, -1.4901e+00,  1.8628e+00,  2.9429e-02,  2.8309e-01,\n",
+      "        -1.3471e-01,  3.5839e-01, -1.9133e-01,  7.0779e-01,  8.8848e-01,\n",
+      "        -7.7423e-01, -2.0249e-01, -5.4976e-02, -8.5141e-02,  2.3286e+00,\n",
+      "         7.6316e-01, -6.1584e-01, -1.1782e+00,  1.3579e+00,  5.7328e-01,\n",
+      "         1.3777e-01,  7.8131e-01, -2.8419e-01, -7.0790e-01, -1.7824e+00,\n",
+      "         1.2465e+00, -5.6771e-01, -1.1582e+00, -1.2459e-01, -8.3207e-02,\n",
+      "         7.2131e-01, -2.1122e-01, -6.3741e-01, -7.8790e-01,  8.0683e-02,\n",
+      "        -3.2199e-02,  6.3892e-01, -7.3547e-01,  5.3118e-01, -1.6505e+00,\n",
+      "         1.7429e+00, -1.9614e+00, -4.5650e-01, -6.3020e-02, -9.1665e-01,\n",
+      "         1.5693e+00, -1.0086e+00, -4.2898e-01,  1.8248e+00, -8.5476e-01,\n",
+      "        -6.5608e-01,  2.6339e+00,  5.8735e-01,  1.3075e+00, -2.9551e-02,\n",
+      "        -1.3729e+00, -3.2848e-01, -1.2710e+00,  1.7062e+00,  4.6924e-02,\n",
+      "         5.6930e-01, -4.7529e-01, -3.4694e-01, -6.2418e-01,  7.2001e-02,\n",
+      "        -3.6788e-01,  1.0642e+00,  1.2987e-01,  1.5324e+00,  1.8388e+00,\n",
+      "        -1.0178e+00, -1.8723e+00, -1.4929e+00,  1.0589e+00, -2.7162e-01,\n",
+      "         1.6651e-01, -1.2255e+00, -3.0099e-01, -1.7533e-01, -2.4032e-01,\n",
+      "         3.5154e-02], grad_fn=<SelectBackward0>)\n"
      ]
     }
    ],
@@ -799,13 +818,15 @@
     "# Each token has a 256 element embedding vector associated with it.\n",
     "\n",
     "# To summarize, the embedding layer is called on each individual element of the inputs tensor.\n",
+    "# We get the embedding vectors associated with each token in our input, across all batches.\n",
     "token_embeddings = token_embedding_layer(inputs)\n",
+    "\n",
     "print(token_embeddings[0,3])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "id": "0dffca97",
    "metadata": {},
    "outputs": [
@@ -831,6 +852,96 @@
     "# Second dimension: The length of the embedding vector (same as the one for the token_embedding_layer)\n",
     "positional_embedding_layer = torch.nn.Embedding(context_length, output_dim)\n",
     "print(positional_embedding_layer.weight.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "da6c3399",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We obtain every row of the weights matrix of our positional embedding layer.\n",
+    "positional_embeddings = positional_embedding_layer(torch.arange(context_length))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ed4383f",
+   "metadata": {},
+   "source": [
+    "#### Combine Token Embedding and Positional Embedding Information"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "b3a53fde",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[-0.4299, -0.0516,  0.7956,  ...,  1.1133, -0.8314,  0.6077],\n",
+      "         [ 2.1947, -1.4069, -1.1426,  ..., -2.0044,  0.5426, -0.4569],\n",
+      "         [-0.0539,  3.5703,  0.6972,  ..., -0.7415,  0.1988,  1.6379],\n",
+      "         [ 1.1417, -1.0246, -0.8835,  ...,  0.8379, -0.4229, -2.5971]],\n",
+      "\n",
+      "        [[ 0.5648, -1.3568,  1.1967,  ...,  0.3820, -0.6044, -1.4568],\n",
+      "         [ 2.1732, -1.4414, -2.5853,  ...,  0.0221,  0.5762, -2.3568],\n",
+      "         [-1.4165,  2.0895, -0.6301,  ...,  0.0759, -0.4411,  1.8393],\n",
+      "         [ 0.4274, -0.1980, -1.7843,  ...,  0.8649, -1.1395, -0.9858]],\n",
+      "\n",
+      "        [[-0.4983, -0.5178, -0.3781,  ...,  0.2529, -1.0481,  0.7278],\n",
+      "         [ 3.8505, -2.1037, -1.3436,  ..., -1.9010, -0.7620, -1.3665],\n",
+      "         [ 2.2350,  1.0489, -0.1998,  ..., -0.8770,  1.1737,  0.7894],\n",
+      "         [ 1.5985, -0.4894, -0.1255,  ..., -0.5406, -1.0851, -1.8906]],\n",
+      "\n",
+      "        ...,\n",
+      "\n",
+      "        [[-0.3086, -0.7515,  1.5827,  ...,  0.5543,  0.3605,  0.5656],\n",
+      "         [-0.0072, -0.9049, -0.0691,  ..., -3.2206, -1.3618,  0.1708],\n",
+      "         [ 0.3717,  1.0920, -1.2498,  ...,  0.6439, -0.2667,  1.0625],\n",
+      "         [ 1.4753, -1.0267, -2.7453,  ...,  0.8314, -1.7570, -4.0694]],\n",
+      "\n",
+      "        [[-0.2701, -1.3925, -0.0484,  ..., -0.5649,  0.8033, -0.5801],\n",
+      "         [ 1.6685, -2.6028, -0.4578,  ...,  0.7424, -0.9053, -1.3570],\n",
+      "         [-0.8694,  1.5240,  0.1533,  ..., -0.3384, -0.7533, -0.2704],\n",
+      "         [-0.0264, -0.1902, -2.2431,  ...,  0.3409,  0.2521, -1.7937]],\n",
+      "\n",
+      "        [[-1.3963,  0.6435,  0.5810,  ...,  0.0199, -0.6475, -0.5204],\n",
+      "         [ 2.4470, -1.0469, -1.3689,  ..., -1.4817,  1.1716, -1.2566],\n",
+      "         [-0.3200,  1.7900,  0.5038,  ..., -0.4026,  0.2725, -0.6529],\n",
+      "         [ 1.2132, -0.2700,  0.3752,  ...,  2.5759, -0.3003, -2.9729]]],\n",
+      "       grad_fn=<AddBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# By adding together token and positional embedding info, we ensure that - if \n",
+    "# we repeat the same token over and over - the final input embeddings matrix\n",
+    "# will be different for each token in a different position. Thus, the token embedding\n",
+    "# will be the same, encoding we have the same word, but the positional embedding will\n",
+    "# shift the final embedding result, indicating the word occurs at different positions\n",
+    "# in the context window.\n",
+    "input_embeddings = token_embeddings + positional_embeddings\n",
+    "print(input_embeddings)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d704941b",
+   "metadata": {},
+   "source": [
+    "## Input Pipeline Is Finished!\n",
+    "### We went through this process:\n",
+    "#### Take in full text.\n",
+    "#### Tokenize the text.\n",
+    "#### Get token ids for each token.\n",
+    "#### Get token embeddings for each token, and positional embeddings for the context length.\n",
+    "#### Add up the positional embedding vector to each of the token embedding vectors we got from our batched inputs.\n",
+    "## We have our input embedding vector after the addition!\n"
    ]
   }
  ],
