--- a/text_data_preparation.ipynb
+++ b/text_data_preparation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 1,
    "id": "ac735184",
    "metadata": {},
    "outputs": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 2,
    "id": "028cd798",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
        "20479"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 3,
    "id": "47e79584",
    "metadata": {},
    "outputs": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 4,
    "id": "98010ba4",
    "metadata": {},
    "outputs": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 5,
    "id": "8771f625",
    "metadata": {},
    "outputs": [],
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 6,
    "id": "3ef7e75e",
    "metadata": {},
    "outputs": [],
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 7,
    "id": "b346c3c7",
    "metadata": {},
    "outputs": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 8,
    "id": "1d6b3f91",
    "metadata": {},
    "outputs": [],
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 9,
    "id": "101c6b59",
    "metadata": {},
    "outputs": [],
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 10,
    "id": "60f69578",
    "metadata": {},
    "outputs": [
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 11,
    "id": "dc79bf57",
    "metadata": {},
    "outputs": [
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 12,
    "id": "bdca551b",
    "metadata": {},
    "outputs": [],
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 13,
    "id": "0f7d466a",
    "metadata": {},
    "outputs": [],
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 14,
    "id": "37c893eb",
    "metadata": {},
    "outputs": [
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 15,
    "id": "6cdaad0e",
    "metadata": {},
    "outputs": [],
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 16,
    "id": "7a5732c3",
    "metadata": {},
    "outputs": [
@@ -675,16 +675,16 @@
      "output_type": "stream",
      "text": [
       "Parameter containing:\n",
-      "tensor([[ 0.1422,  1.3499,  0.0085],\n",
-      "        [-0.6922,  0.8727, -0.3314],\n",
-      "        [ 0.1115, -1.4341,  0.7794],\n",
+      "tensor([[-0.5390, -1.5060, -0.1680],\n",
+      "        [ 0.1446,  0.5073,  0.9506],\n",
+      "        [ 1.4607,  0.5258, -0.4856],\n",
       "        ...,\n",
-      "        [ 0.0318,  1.2755, -0.1905],\n",
-      "        [-1.6841,  0.2320,  1.7720],\n",
-      "        [ 0.7137, -0.1814, -0.1863]], requires_grad=True)\n",
-      "tensor([[-0.6922,  0.8727, -0.3314],\n",
-      "        [ 0.1115, -1.4341,  0.7794],\n",
-      "        [ 1.3596, -0.8402,  1.3205]], grad_fn=<EmbeddingBackward0>)\n"
+      "        [ 1.4241,  2.3658,  0.4780],\n",
+      "        [-1.0567,  2.0059, -0.2979],\n",
+      "        [-0.7015, -0.0934,  0.2091]], requires_grad=True)\n",
+      "tensor([[ 0.1446,  0.5073,  0.9506],\n",
+      "        [ 1.4607,  0.5258, -0.4856],\n",
+      "        [ 2.5969, -0.2028,  1.3335]], grad_fn=<EmbeddingBackward0>)\n"
      ]
     }
    ],
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 17,
    "id": "157dc71e",
    "metadata": {},
    "outputs": [
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 18,
    "id": "84b05257",
    "metadata": {},
    "outputs": [
@@ -743,58 +743,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([ 7.7118e-01, -9.2974e-01, -1.5828e-01,  8.5135e-01, -8.0851e-03,\n",
-      "         5.0699e-02, -1.0843e+00,  6.3269e-02, -1.6556e-01, -1.3544e-01,\n",
-      "         2.7106e-01,  1.2554e+00, -4.8439e-01,  1.1516e+00, -4.6239e-01,\n",
-      "         3.6374e-01, -1.3427e+00,  1.0661e+00,  1.2578e+00,  1.2672e-01,\n",
-      "         1.7477e-01, -1.0488e+00,  5.8173e-01, -2.2263e+00, -2.0617e+00,\n",
-      "        -7.1330e-01, -1.9703e+00, -3.1242e-01, -3.2559e-01, -7.1192e-01,\n",
-      "        -3.4166e-01, -7.1205e-01,  6.5266e-01,  8.1025e-01, -7.0064e-01,\n",
-      "        -3.2591e-01, -1.2289e+00,  2.9190e-01,  2.4351e+00, -1.4330e+00,\n",
-      "         5.4785e-01, -1.8055e-01, -1.1329e+00, -3.5984e-01, -7.8549e-01,\n",
-      "         1.6140e+00, -1.5142e+00,  5.8546e-01,  1.9216e+00,  1.6418e+00,\n",
-      "         6.5437e-01,  9.6917e-03, -1.5318e-01, -5.4701e-01, -6.9347e-01,\n",
-      "        -4.6413e-02,  1.3223e-01,  7.5760e-01,  2.6694e-01, -1.4334e+00,\n",
-      "        -1.5191e+00, -8.4123e-01, -3.7706e-01,  4.5188e-01, -1.9955e-01,\n",
-      "        -1.9127e+00, -4.6297e-01,  2.0883e-01, -9.1991e-01, -1.1842e+00,\n",
-      "         2.2082e-01,  6.4070e-01,  4.7851e-01, -5.8930e-01, -2.5287e+00,\n",
-      "         1.8860e-01,  7.0615e-01,  4.2127e-01, -5.8463e-01, -2.3257e-02,\n",
-      "        -8.4745e-01,  5.5093e-01, -3.0655e-01, -5.3289e-01,  5.8352e-01,\n",
-      "        -1.0410e+00, -2.6339e-01, -3.2854e-01, -1.0870e-01,  8.6757e-01,\n",
-      "         9.2665e-01, -8.0771e-01,  1.3508e+00, -4.1582e-01,  6.2664e-01,\n",
-      "         1.8516e+00,  8.6764e-01, -6.4712e-01,  2.0849e-01, -4.1594e-01,\n",
-      "         9.5970e-01, -2.4885e-01,  1.1266e+00,  6.3429e-01,  8.6201e-01,\n",
-      "        -3.6971e-01, -8.3299e-01, -4.6948e-01, -1.8961e-01,  1.0175e+00,\n",
-      "         3.2444e-01,  3.8268e-01,  4.3652e-01,  7.2038e-01, -2.1642e-01,\n",
-      "         2.0354e-01, -1.1951e+00,  9.2216e-01,  6.5435e-01,  1.3369e+00,\n",
-      "         2.4652e-01,  3.8230e-01, -5.0043e-01, -2.0885e-01, -1.2338e+00,\n",
-      "         5.3839e-01, -1.0345e+00,  1.8830e+00,  1.6478e+00, -1.3122e-01,\n",
-      "        -8.5664e-01,  6.0852e-01, -1.8479e+00,  1.5597e+00,  2.1500e+00,\n",
-      "         2.9300e-01, -1.0135e+00, -2.5050e-01,  7.3789e-01, -3.6770e-01,\n",
-      "         4.1557e-01,  4.4266e-01, -1.1801e+00, -1.0569e+00,  5.5040e-01,\n",
-      "        -1.4573e+00,  1.7301e+00,  2.0029e-01, -8.2808e-01, -1.5826e+00,\n",
-      "         7.1532e-01,  5.0931e-01,  4.5970e-01,  1.2263e+00, -1.3747e+00,\n",
-      "         1.4157e-03, -2.3536e+00, -2.5057e-01,  3.2942e-01, -1.2207e-01,\n",
-      "         1.1630e+00,  2.1913e-02,  1.5748e+00,  2.1371e-01,  1.2795e+00,\n",
-      "        -4.8120e-02,  9.1871e-01, -1.7607e-02,  1.0854e-03, -4.3180e-01,\n",
-      "        -1.1395e+00,  1.1968e-01,  1.4586e-03, -9.0506e-01, -9.8220e-01,\n",
-      "        -2.9821e-01, -1.4901e+00,  1.8628e+00,  2.9429e-02,  2.8309e-01,\n",
-      "        -1.3471e-01,  3.5839e-01, -1.9133e-01,  7.0779e-01,  8.8848e-01,\n",
-      "        -7.7423e-01, -2.0249e-01, -5.4976e-02, -8.5141e-02,  2.3286e+00,\n",
-      "         7.6316e-01, -6.1584e-01, -1.1782e+00,  1.3579e+00,  5.7328e-01,\n",
-      "         1.3777e-01,  7.8131e-01, -2.8419e-01, -7.0790e-01, -1.7824e+00,\n",
-      "         1.2465e+00, -5.6771e-01, -1.1582e+00, -1.2459e-01, -8.3207e-02,\n",
-      "         7.2131e-01, -2.1122e-01, -6.3741e-01, -7.8790e-01,  8.0683e-02,\n",
-      "        -3.2199e-02,  6.3892e-01, -7.3547e-01,  5.3118e-01, -1.6505e+00,\n",
-      "         1.7429e+00, -1.9614e+00, -4.5650e-01, -6.3020e-02, -9.1665e-01,\n",
-      "         1.5693e+00, -1.0086e+00, -4.2898e-01,  1.8248e+00, -8.5476e-01,\n",
-      "        -6.5608e-01,  2.6339e+00,  5.8735e-01,  1.3075e+00, -2.9551e-02,\n",
-      "        -1.3729e+00, -3.2848e-01, -1.2710e+00,  1.7062e+00,  4.6924e-02,\n",
-      "         5.6930e-01, -4.7529e-01, -3.4694e-01, -6.2418e-01,  7.2001e-02,\n",
-      "        -3.6788e-01,  1.0642e+00,  1.2987e-01,  1.5324e+00,  1.8388e+00,\n",
-      "        -1.0178e+00, -1.8723e+00, -1.4929e+00,  1.0589e+00, -2.7162e-01,\n",
-      "         1.6651e-01, -1.2255e+00, -3.0099e-01, -1.7533e-01, -2.4032e-01,\n",
-      "         3.5154e-02], grad_fn=<SelectBackward0>)\n"
+      "tensor([ 0.4079,  1.3334, -0.7764,  0.6020, -0.2597, -0.9132, -2.1155,  0.1565,\n",
+      "        -1.2615,  1.4866,  0.5561,  0.4372, -0.0382, -1.5180, -0.8812,  0.0138,\n",
+      "        -0.1537, -0.9882,  1.4844,  0.4775, -0.4442,  0.4052,  0.0583, -0.8427,\n",
+      "         0.1220,  1.0656,  1.0311, -2.1912,  0.6313, -0.6810, -1.2608, -0.4965,\n",
+      "        -0.8982, -0.0246,  1.2030, -0.8742, -0.6771,  1.8891, -0.2641,  0.7401,\n",
+      "         1.0928,  1.1541, -0.0426, -1.6451,  0.4244, -1.4211, -0.1050,  0.3751,\n",
+      "         1.2831,  0.1727,  1.0059,  0.7913,  1.1024,  0.7694, -1.3544,  0.1974,\n",
+      "        -2.7802, -0.7463, -0.2951,  0.7043,  0.4681, -0.8142, -0.3993,  1.0891,\n",
+      "        -0.2619,  1.0819, -0.1875, -0.0961,  0.1767,  2.0458, -0.6308,  1.1335,\n",
+      "        -0.3522, -1.5920,  2.0637, -0.0775, -1.1981,  0.5535, -0.9129, -0.6835,\n",
+      "        -0.0444, -0.1215,  0.4145,  0.7970, -1.1134,  0.3288, -0.2297,  0.3765,\n",
+      "         0.0559,  0.6177,  2.0378, -0.5183, -1.0098,  0.8980, -1.5795,  0.2159,\n",
+      "        -1.4685,  0.4742,  1.1806, -0.0299, -0.3410, -0.2254,  0.9437, -0.0499,\n",
+      "         0.0472, -1.4081,  0.8178,  1.3440,  0.3598,  1.1443, -0.6255, -0.2909,\n",
+      "        -0.6205,  1.7877, -0.1964, -0.2204, -0.2199,  0.1790, -1.3693,  1.5343,\n",
+      "         1.8522, -1.2935,  2.4520,  1.6289,  0.8597, -1.0676, -1.3786,  0.1969,\n",
+      "         0.0484,  0.1013, -0.1863, -0.6386,  0.4080, -0.9137, -1.7599,  0.8510,\n",
+      "        -1.8712, -0.2153, -0.7148, -0.7293, -0.0861,  2.0626, -0.2704,  0.9578,\n",
+      "        -1.3478,  0.0700, -0.6274,  1.7080,  0.2039,  0.5610,  0.3441,  0.3595,\n",
+      "        -0.0836, -1.1322,  0.7168,  0.5497,  0.8096,  1.5097, -0.2489, -1.4421,\n",
+      "        -2.1404,  0.1596, -0.2124,  0.9270,  0.0119, -0.3897,  0.3079, -1.5957,\n",
+      "        -0.3225,  1.1908, -1.0780,  0.8652, -1.0698,  1.5633,  0.6118,  0.3585,\n",
+      "        -0.3840, -0.3508, -1.2690,  1.4262,  1.4146,  0.2975,  1.3514, -0.4022,\n",
+      "         0.6015,  0.2779,  0.2675,  0.9218,  0.1012, -0.7165, -0.9404, -1.0634,\n",
+      "         1.6012, -0.4527, -2.5621, -0.8602, -0.7818,  0.2798,  0.4150,  1.4705,\n",
+      "        -0.5030,  0.0938, -0.2852,  0.4323,  0.9792, -1.2683, -0.6887,  0.3318,\n",
+      "         0.7492, -0.1761,  0.2790, -1.3780, -0.4638,  0.3389, -0.9848, -1.2661,\n",
+      "        -0.4727,  0.1101, -0.5356,  0.7505,  0.9266,  1.1001,  0.2069, -0.3438,\n",
+      "        -1.7007,  1.2604,  0.1851,  0.6465,  1.5908, -0.9419,  0.4401,  0.5788,\n",
+      "         1.2897, -0.6651, -0.6328, -0.9656,  1.0799,  0.1760, -1.2427, -0.5183,\n",
+      "        -0.8356, -0.6623,  0.6976, -0.2249,  1.6991, -1.0903, -0.3642,  0.8805,\n",
+      "         0.5050, -1.3175, -0.0881, -0.2441,  0.0620,  1.2351, -0.1947,  1.0410],\n",
+      "       grad_fn=<SelectBackward0>)\n"
      ]
     }
    ],
@@ -826,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 19,
    "id": "0dffca97",
    "metadata": {},
    "outputs": [
@@ -856,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 20,
    "id": "da6c3399",
    "metadata": {},
    "outputs": [],
@@ -875,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 21,
    "id": "b3a53fde",
    "metadata": {},
    "outputs": [
@@ -883,37 +864,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[[-0.4299, -0.0516,  0.7956,  ...,  1.1133, -0.8314,  0.6077],\n",
-      "         [ 2.1947, -1.4069, -1.1426,  ..., -2.0044,  0.5426, -0.4569],\n",
-      "         [-0.0539,  3.5703,  0.6972,  ..., -0.7415,  0.1988,  1.6379],\n",
-      "         [ 1.1417, -1.0246, -0.8835,  ...,  0.8379, -0.4229, -2.5971]],\n",
+      "tensor([[[ 1.4970,  0.3141,  1.8200,  ...,  1.0933,  0.4070, -1.6585],\n",
+      "         [ 0.6883, -2.0955,  0.7987,  ...,  0.2545,  0.3920, -0.6902],\n",
+      "         [ 1.7570, -0.1174,  1.5699,  ...,  1.0220, -3.0590,  0.0119],\n",
+      "         [ 0.0303,  2.5509, -0.4646,  ...,  0.4406,  0.6458,  1.2494]],\n",
       "\n",
-      "        [[ 0.5648, -1.3568,  1.1967,  ...,  0.3820, -0.6044, -1.4568],\n",
-      "         [ 2.1732, -1.4414, -2.5853,  ...,  0.0221,  0.5762, -2.3568],\n",
-      "         [-1.4165,  2.0895, -0.6301,  ...,  0.0759, -0.4411,  1.8393],\n",
-      "         [ 0.4274, -0.1980, -1.7843,  ...,  0.8649, -1.1395, -0.9858]],\n",
+      "        [[ 2.3469, -1.2378,  0.6323,  ..., -0.1104, -0.2579, -0.6035],\n",
+      "         [ 0.2133,  0.0959, -1.7812,  ...,  1.1353, -0.0064, -1.0774],\n",
+      "         [ 1.4297, -0.1182, -1.5221,  ...,  0.7327,  1.0956, -0.1765],\n",
+      "         [-0.7327,  1.6162,  0.0551,  ..., -1.7444,  0.6004,  0.5153]],\n",
       "\n",
-      "        [[-0.4983, -0.5178, -0.3781,  ...,  0.2529, -1.0481,  0.7278],\n",
-      "         [ 3.8505, -2.1037, -1.3436,  ..., -1.9010, -0.7620, -1.3665],\n",
-      "         [ 2.2350,  1.0489, -0.1998,  ..., -0.8770,  1.1737,  0.7894],\n",
-      "         [ 1.5985, -0.4894, -0.1255,  ..., -0.5406, -1.0851, -1.8906]],\n",
+      "        [[ 0.1460, -0.5993,  3.2053,  ...,  0.2799, -0.1827,  0.7737],\n",
+      "         [ 1.2244, -1.4739,  0.6926,  ..., -1.0876, -0.6567, -0.5738],\n",
+      "         [ 0.9751,  1.0016,  1.8611,  ...,  1.4372, -0.7812,  0.8420],\n",
+      "         [ 0.0985,  1.5736, -0.5514,  ..., -1.4153,  1.1628,  0.2084]],\n",
       "\n",
       "        ...,\n",
       "\n",
-      "        [[-0.3086, -0.7515,  1.5827,  ...,  0.5543,  0.3605,  0.5656],\n",
-      "         [-0.0072, -0.9049, -0.0691,  ..., -3.2206, -1.3618,  0.1708],\n",
-      "         [ 0.3717,  1.0920, -1.2498,  ...,  0.6439, -0.2667,  1.0625],\n",
-      "         [ 1.4753, -1.0267, -2.7453,  ...,  0.8314, -1.7570, -4.0694]],\n",
+      "        [[ 1.3578, -0.6983,  1.4997,  ..., -1.2781,  0.9010, -0.9538],\n",
+      "         [ 0.7567, -2.1431,  0.2507,  ..., -1.5667,  2.4807, -2.0364],\n",
+      "         [ 2.0918,  0.8805,  1.6030,  ...,  1.7620,  0.5999,  0.6116],\n",
+      "         [-0.7460,  1.0642,  0.1289,  ..., -1.6031,  0.4883,  1.6039]],\n",
       "\n",
-      "        [[-0.2701, -1.3925, -0.0484,  ..., -0.5649,  0.8033, -0.5801],\n",
-      "         [ 1.6685, -2.6028, -0.4578,  ...,  0.7424, -0.9053, -1.3570],\n",
-      "         [-0.8694,  1.5240,  0.1533,  ..., -0.3384, -0.7533, -0.2704],\n",
-      "         [-0.0264, -0.1902, -2.2431,  ...,  0.3409,  0.2521, -1.7937]],\n",
+      "        [[ 3.1700,  0.1409,  1.7436,  ..., -1.1399, -0.7284,  0.2352],\n",
+      "         [-0.7008, -1.5114,  0.9647,  ..., -0.1282,  1.6043,  1.1227],\n",
+      "         [ 0.9548, -0.0149, -0.5323,  ...,  2.1050,  1.7050,  0.7204],\n",
+      "         [ 0.2807,  1.5769,  0.6160,  ...,  0.0565, -0.5302,  0.2787]],\n",
       "\n",
-      "        [[-1.3963,  0.6435,  0.5810,  ...,  0.0199, -0.6475, -0.5204],\n",
-      "         [ 2.4470, -1.0469, -1.3689,  ..., -1.4817,  1.1716, -1.2566],\n",
-      "         [-0.3200,  1.7900,  0.5038,  ..., -0.4026,  0.2725, -0.6529],\n",
-      "         [ 1.2132, -0.2700,  0.3752,  ...,  2.5759, -0.3003, -2.9729]]],\n",
+      "        [[ 0.7349,  0.1960, -0.6579,  ...,  1.1775,  1.8007, -1.1441],\n",
+      "         [-0.4623, -1.2050,  0.8249,  ...,  0.3717, -0.3940,  1.6292],\n",
+      "         [ 2.2024, -0.0778,  0.0766,  ...,  0.2592, -0.2295,  1.5568],\n",
+      "         [-1.1348,  2.4819, -1.3858,  ..., -1.3035,  0.0768, -1.0415]]],\n",
       "       grad_fn=<AddBackward0>)\n"
      ]
     }
