Normalized attention scores

--- a/attention_mechanism.ipynb
+++ b/attention_mechanism.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "id": "6ca74ac6",
    "metadata": {},
    "outputs": [
@@ -18,8 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([0.4600, 0.8600, 0.8300])\n",
-      "tensor(8.5637)\n"
+      "tensor([1.6401, 1.4494, 1.5015, 1.5218, 1.4213, 1.0296])\n"
      ]
     }
    ],
@@ -36,14 +35,50 @@
     "  [0.53, 0.74, 0.18],\n",
     "])\n",
     "\n",
-    "context_token = inputs[0]\n",
-    "print(context_token)\n",
+    "query_token = inputs[0]\n",
+    "#print(inputs.shape)\n",
     "\n",
-    "result = torch.tensor(0.0)\n",
+    "## This vector holds the dot product results between each embedding vector\n",
+    "## for each token in our context and the embedding vector of our query token,\n",
+    "## our query token being the token we're using to try and predict what word w\n",
+    "## should come next.\n",
+    "attention_score_vector = torch.empty(inputs.shape[0])\n",
+    "#print(\"Attention\", attention_result_vector)\n",
+    "\n",
     "for index, tensor in enumerate(inputs):\n",
-    "  result += torch.dot(context_token, inputs[index])\n",
+    "  attention_score_vector[index] = torch.dot(query_token, inputs[index])\n",
     "\n",
-    "print(torch.round(result, decimals=4))"
+    "print(torch.round(attention_score_vector, decimals=4))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7487b60",
+   "metadata": {},
+   "source": [
+    "#### Now, we wish to normalize the attention score vector\n",
+    "##### Helps with optimization - to work with smaller numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "24b3e410",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([1.6401, 1.4494, 1.5015, 1.5218, 1.4213, 1.0296])\n",
+      "tensor([0.1915, 0.1692, 0.1753, 0.1777, 0.1660, 0.1202])\n"
+     ]
+    }
+   ],
+   "source": [
+    "attention_score_vector_normalized = attention_score_vector/torch.sum(attention_score_vector)\n",
+    "print(attention_score_vector)\n",
+    "print(attention_score_vector_normalized)"
    ]
   }
  ],
