Updated where I am in the video

--- a/attention_mechanism.ipynb
+++ b/attention_mechanism.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "id": "6ca74ac6",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "24b3e410",
    "metadata": {},
    "outputs": [
@@ -71,14 +71,21 @@
      "output_type": "stream",
      "text": [
       "tensor([1.6401, 1.4494, 1.5015, 1.5218, 1.4213, 1.0296])\n",
-      "tensor([0.1915, 0.1692, 0.1753, 0.1777, 0.1660, 0.1202])\n"
+      "tensor([0.1915, 0.1692, 0.1753, 0.1777, 0.1660, 0.1202])\n",
+      "Torch softmax'd tensor([0.2028, 0.1676, 0.1765, 0.1801, 0.1629, 0.1101])\n"
      ]
     }
    ],
    "source": [
     "attention_score_vector_normalized = attention_score_vector/torch.sum(attention_score_vector)\n",
     "print(attention_score_vector)\n",
-    "print(attention_score_vector_normalized)"
+    "print(attention_score_vector_normalized)\n",
+    "\n",
+    "\n",
+    "# This is a more stable version of softmax based normalization\n",
+    "# Softmax formula: e^{x_i} / sum_[of all x_i] (e^{x_i})\n",
+    "torch_normalized_attention_score = torch.softmax(attention_score_vector, dim=0)\n",
+    "print(\"Torch softmax'd\", torch_normalized_attention_score)"
    ]
   }
  ],
