Reasoning about creating a context vector

--- a/attention_mechanism.ipynb
+++ b/attention_mechanism.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6ca74ac6",
    "metadata": {},
    "outputs": [
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([1.6401, 1.4494, 1.5015, 1.5218, 1.4213, 1.0296])\n"
+      "tensor([1.4494, 1.2856, 1.3202, 1.3484, 1.2090, 0.8788])\n"
      ]
     }
    ],
@@ -35,12 +35,12 @@
     "  [0.53, 0.74, 0.18],\n",
     "])\n",
     "\n",
-    "query_token = inputs[0]\n",
+    "query_token = inputs[1]\n",
     "#print(inputs.shape)\n",
     "\n",
     "## This vector holds the dot product results between each embedding vector\n",
     "## for each token in our context and the embedding vector of our query token,\n",
-    "## our query token being the token we're using to try and predict what word w\n",
+    "## our query token being the current token we're using to try and predict what word\n",
     "## should come next.\n",
     "attention_score_vector = torch.empty(inputs.shape[0])\n",
     "#print(\"Attention\", attention_result_vector)\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "24b3e410",
    "metadata": {},
    "outputs": [
@@ -70,9 +70,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([1.6401, 1.4494, 1.5015, 1.5218, 1.4213, 1.0296])\n",
-      "tensor([0.1915, 0.1692, 0.1753, 0.1777, 0.1660, 0.1202])\n",
-      "Torch softmax'd tensor([0.2028, 0.1676, 0.1765, 0.1801, 0.1629, 0.1101])\n"
+      "tensor([1.4494, 1.2856, 1.3202, 1.3484, 1.2090, 0.8788])\n",
+      "tensor([0.1935, 0.1716, 0.1762, 0.1800, 0.1614, 0.1173])\n",
+      "Torch softmax'd tensor([0.2007, 0.1704, 0.1764, 0.1814, 0.1578, 0.1134])\n"
      ]
     }
    ],
@@ -86,6 +86,41 @@
     "# Softmax formula: e^{x_i} / sum_[of all x_i] (e^{x_i})\n",
     "torch_normalized_attention_score = torch.softmax(attention_score_vector, dim=0)\n",
     "print(\"Torch softmax'd\", torch_normalized_attention_score)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5202d376",
+   "metadata": {},
+   "source": [
+    "#### Now we want to go through each value of our normalized attention score vector, multiply it to each embedding vector in our inputs array, and then add the product, individually, to an all-zeros vector, creating our context vector for the second token, our query token.\n",
+    "\n",
+    "##### attention_score_vector_unnormalized: query_token [of shape (d)], dot_product_with_each_input_token_embedding_vector[of shape (n, d)], creates new vector of shape (n,)\n",
+    "\n",
+    "##### attention_score_vector: normalized version of attention_score_vector_unnormalized, using torch.softmax(vector, dim=0), on the unnormalized vector\n",
+    "\n",
+    "##### context vector: take each element in your normalized attention score vector [of shape (n,)] for the current query token, multiply it by the corresponding input token embedding vector [the array of embedding vectors is of shape (n, d)], and add it to a vector initially filled with all zeros [of shape (d)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6aeaca97",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.3600, 0.7400, 0.7800])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query_token"
    ]
   }
  ],
